APM-3427 Only run mock auth tests on mock auth deployment

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -70,3 +70,5 @@ extends:
           RATELIMITING: ${{ variables.ratelimiting }}
         post_deploy:
           - template: ./templates/run-integration-tests.yml
+            parameters:
+              mock_auth: true
