APM-3427 Add markers to config

--- a/pytest.ini
+++ b/pytest.ini
@@ -13,6 +13,8 @@ markers =
     token_exchange
     logging: splunk logging tests
     debug: run this test only
+    mock_auth: test uses second gen mock auth
+    simulated_auth: test uses first gen mock auth
 
     # Jira APM tickets included
     apm_801: a reference to the Jira ticket this test belongs to
