--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -57,7 +57,7 @@ steps:
       export STATUS_ENDPOINT_API_KEY="$(status-endpoint-api-key)"
       make e2e-mock
     workingDirectory: $(SERVICE_DIR)
-    displayName: run e2e tests
+    displayName: run mock auth e2e tests
     condition: eq('${{ parameters.mock_auth }}', 'true')
     
   - task: PublishTestResults@2
