APM-3427 Add markers

--- a/e2e/pytest.ini
+++ b/e2e/pytest.ini
@@ -22,6 +22,8 @@ markers =
     sandbox: sandbox specific tests
     auth: temporary test spine auth
     logging: splunk logging tests
+    mock_auth: test uses second gen mock auth
+    simulated_auth: test uses first gen mock auth
 
     # Jira AMB tickets included
     apm_1521
