--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest-rerunfailures = "^10.0"
 beautifulsoup4 = "^4.10.0"
 selenium = "^4.0.0"
 pytest-xdist = {extras = ["psutil"], version = "^2.4.0"}
+pytest-nhsd-apim = { git = "https://github.com/NHSDigital/pytest-nhsd-apim.git", branch = "APM-3427-token-data-fixture" }
 
 
 [tool.poetry.dev-dependencies]
