--- a/manifest_template.yml
+++ b/manifest_template.yml
@@ -43,7 +43,7 @@ apigee:
           - identity-service-internal-dev
           - identity-service-mock-internal-dev
         scopes:
-          - urn:nhsd:apim:user-nhs-id:aal3:identity-service
+          - urn:nhsd:apim:user-nhs-cis2:aal3:identity-service
           - urn:nhsd:apim:user-nhs-login:p5:identity-service
           - urn:nhsd:apim:app:level3:identity-service
 {% else %}
