APM-3427 Add param on mock test runs

--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -61,6 +61,8 @@ extends:
           RATELIMITING: ${{ variables.ratelimiting }}
         post_deploy:
           - template: ./templates/run-integration-tests.yml
+            parameters:
+              mock_auth: true
       - environment: internal-qa
         depends_on:
           - internal_dev
