APM-2975 add fixture to update default app jwks_resource_url

--- a/e2e/pytest.ini
+++ b/e2e/pytest.ini
@@ -24,6 +24,7 @@ markers =
     logging: splunk logging tests
     mock_auth: test uses second gen mock auth
     simulated_auth: test uses first gen mock auth
+    jwks_resource_url
 
     # Jira AMB tickets included
     apm_1521
