--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -115,10 +115,10 @@ extends:
         service_base_path: ${{ variables.service_base_path }}-dep
         jinja_templates:
           IDENTITY_PROVIDER_CIS2: cis2
-          IDENTITY_PROVIDER_NHS_LOGIN: nhs-login-keycloak
+          IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
           VARIABLES_KVM: identity_service_config_dep
           ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
-          ENCRYPTED_VARIABLES_KVM_KEY_CLIENT_SECRET: keycloak_client_secret
+          ENCRYPTED_VARIABLES_KVM_KEY_CLIENT_SECRET: dep_client_secret
           NUM_RANDOM_LONG_INTS_FOR_STATE: 4
           RATELIMITING: ${{ variables.ratelimiting }}
       - environment: sandbox # required for hello-world https://portal.developer.nhs.uk/docs/hello-world-sandbox/1/routes/hello/application/get
