APM-3440 Add in smoke marker

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,7 @@ junit_family=xunit1
 markers =
     happy_path: checks happy path scenarios
     errors: checks against error conditions
+    smoke: checks against health of proxy deployed
     token_endpoint: associated with the /token endpoint
     authorize_endpoint: associated with the /authorize endpoint
     callback_endpoint:  associated with the /callback endpoint
