--- a/azure/project.yml
+++ b/azure/project.yml
@@ -27,4 +27,18 @@ variables:
         }
       }
     }
-
+  default_keycloak_jinja_templates:
+    IDENTITY_PROVIDER_CIS2: cis2-keycloak
+    IDENTITY_PROVIDER_NHS_LOGIN: nhs-login-keycloak
+    VARIABLES_KVM: identity_service_config_keycloak
+    ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
+    ENCRYPTED_VARIABLES_KVM_KEY_CLIENT_SECRET: keycloak_client_secret
+    NUM_RANDOM_LONG_INTS_FOR_STATE: 4
+    RATELIMITING: ${{ variables.ratelimiting }}
+  default_jinja_templates:
+    IDENTITY_PROVIDER_CIS2: cis2
+    IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
+    VARIABLES_KVM: identity_service_config
+    ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
+    NUM_RANDOM_LONG_INTS_FOR_STATE: 4
+    RATELIMITING: ${{ variables.ratelimiting }}
