--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -55,8 +55,8 @@ extends:
         stage_name: internal_dev
         service_base_path: ${{ variables.service_base_path }}
         jinja_templates:
-          IDENTITY_PROVIDER_CIS2: cis2
-          IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
+          IDENTITY_PROVIDER_CIS2: cis2-keycloak
+          IDENTITY_PROVIDER_NHS_LOGIN: nhs-login-keycloak
           VARIABLES_KVM: identity_service_config
           ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
           NUM_RANDOM_LONG_INTS_FOR_STATE: 4
@@ -74,8 +74,8 @@ extends:
         stage_name: internal_dev_sandbox
         service_base_path: ${{ variables.service_base_path }}
         jinja_templates:
-          IDENTITY_PROVIDER_CIS2: cis2
-          IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
+          IDENTITY_PROVIDER_CIS2: cis2-keycloak
+          IDENTITY_PROVIDER_NHS_LOGIN: nhs-login-keycloak
           VARIABLES_KVM: identity_service_config
           ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
           NUM_RANDOM_LONG_INTS_FOR_STATE: 4
@@ -93,8 +93,8 @@ extends:
         stage_name: internal_qa
         service_base_path: ${{ variables.service_base_path }}
         jinja_templates:
-          IDENTITY_PROVIDER_CIS2: cis2
-          IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
+          IDENTITY_PROVIDER_CIS2: cis2-keycloak
+          IDENTITY_PROVIDER_NHS_LOGIN: nhs-login-keycloak
           VARIABLES_KVM: identity_service_config
           ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
           NUM_RANDOM_LONG_INTS_FOR_STATE: 4
@@ -123,8 +123,8 @@ extends:
         stage_name: internal_qa_sandbox
         service_base_path: ${{ variables.service_base_path }}
         jinja_templates:
-          IDENTITY_PROVIDER_CIS2: cis2
-          IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
+          IDENTITY_PROVIDER_CIS2: cis2-keycloak
+          IDENTITY_PROVIDER_NHS_LOGIN: nhs-login-keycloak
           VARIABLES_KVM: identity_service_config
           ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
           NUM_RANDOM_LONG_INTS_FOR_STATE: 4
@@ -142,8 +142,8 @@ extends:
         stage_name: ref
         service_base_path: ${{ variables.service_base_path }}
         jinja_templates:
-          IDENTITY_PROVIDER_CIS2: cis2
-          IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
+          IDENTITY_PROVIDER_CIS2: cis2-keycloak
+          IDENTITY_PROVIDER_NHS_LOGIN: nhs-login-keycloak
           VARIABLES_KVM: identity_service_config
           ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
           NUM_RANDOM_LONG_INTS_FOR_STATE: 4
@@ -152,7 +152,7 @@ extends:
       # DEV
       - environment: dev # real nhs-login, mock cis2
         jinja_templates:
-          IDENTITY_PROVIDER_CIS2: cis2
+          IDENTITY_PROVIDER_CIS2: cis2-keycloak
           IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
           VARIABLES_KVM: identity_service_config
           ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
@@ -189,8 +189,8 @@ extends:
         stage_name: sandbox
         service_base_path: ${{ variables.service_base_path }}
         jinja_templates:
-          IDENTITY_PROVIDER_CIS2: cis2
-          IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
+          IDENTITY_PROVIDER_CIS2: cis2-keycloak
+          IDENTITY_PROVIDER_NHS_LOGIN: nhs-login-keycloak
           VARIABLES_KVM: identity_service_config
           ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
           NUM_RANDOM_LONG_INTS_FOR_STATE: 4
