--- a/manifest_template.yml
+++ b/manifest_template.yml
@@ -43,6 +43,8 @@ apigee:
           - identity-service-mock-internal-dev
         scopes:
           - urn:nhsd:apim:user-nhs-cis2:aal3:identity-service
+          - urn:nhsd:apim:user-nhs-cis2:aal2:identity-service
+          - urn:nhsd:apim:user-nhs-cis2:aal1:identity-service
           - urn:nhsd:apim:user-nhs-login:P0:identity-service
           - urn:nhsd:apim:user-nhs-login:P5:identity-service
           - urn:nhsd:apim:user-nhs-login:P9:identity-service
