--- a/e2e/performance/pyproject.toml
+++ b/e2e/performance/pyproject.toml
@@ -11,7 +11,7 @@ locust = "^1.1.1"
 pyjwt = "^2.0.0"
 cryptography = "^3.3.1"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 flake8 = "^3.8.3"
 black = "^19.10b0"
 
