--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ jsonpath-rw = "^1.4.0"
 semver = "^2.9.0"
 gitpython = "^3.0.5"
 flake8 = "^3.7.9"
-black = "^24.3.0"
+black = "^19.10b0"
 pip-licenses = "^2.0.1"
 jinja2 = "^3.1.6"
 bandit = "^1.6.2"
