--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "homepage": "https://github.com/NHSDigital/template-api",
   "dependencies": {
+    "handlebars": "^4.7.7",
     "loader-utils": "^1.4.1",
     "speccy": "^0.11.0"
   },
