--- a/package.json
+++ b/package.json
@@ -12,12 +12,25 @@
   "license": "MIT",
   "homepage": "https://github.com/NHSDigital/template-api",
   "dependencies": {
-    "dompurify": "^2.0.7",
+    "ajv": "^6.12.3",
+    "braces": "^3.0.3",
+    "dompurify": "^2.0.17",
     "ejs": "^3.1.7",
     "handlebars": "^4.7.7",
+    "highlight.js": "^10.4.1",
+    "ini": "^1.3.6",
+    "json5": "^1.0.2",
+    "jsonpointer": "^5.0.0",
     "loader-utils": "^1.4.1",
+    "lodash": "^4.17.21",
+    "marked": "^4.0.10",
+    "moment": "^2.29.2",
+    "nconf": "^0.11.4",
     "set-getter": "^0.1.1",
-    "speccy": "^0.11.0"
+    "speccy": "^0.11.0",
+    "striptags": "^3.2.0",
+    "y18n": "^4.0.1",
+    "yargs-parser": "^13.1.2"
   },
   "devDependencies": {
     "apigeetool": "^0.16.4",
